@@ -1515,6 +1515,7 @@ These functions assign new values to already initialized floats
 @deftypefunx int mpfr_set_flt (mpfr_t @var{rop}, float @var{op}, mpfr_rnd_t @var{rnd})
 @deftypefunx int mpfr_set_d (mpfr_t @var{rop}, double @var{op}, mpfr_rnd_t @var{rnd})
 @deftypefunx int mpfr_set_ld (mpfr_t @var{rop}, long double @var{op}, mpfr_rnd_t @var{rnd})
+@deftypefunx int mpfr_set_float16 (mpfr_t @var{rop}, _Float16 @var{op}, mpfr_rnd_t @var{rnd})
 @deftypefunx int mpfr_set_float128 (mpfr_t @var{rop}, _Float128 @var{op}, mpfr_rnd_t @var{rnd})
 @deftypefunx int mpfr_set_decimal64 (mpfr_t @var{rop}, _Decimal64 @var{op}, mpfr_rnd_t @var{rnd})
 @deftypefunx int mpfr_set_decimal128 (mpfr_t @var{rop}, _Decimal128 @var{op}, mpfr_rnd_t @var{rnd})
@@ -1527,6 +1528,9 @@ Note that the input 0 is converted to @mm{+}0 by @code{mpfr_set_ui},
 @code{mpfr_set_si}, @code{mpfr_set_uj}, @code{mpfr_set_sj},
 @code{mpfr_set_z}, @code{mpfr_set_q} and
 @code{mpfr_set_f}, regardless of the rounding mode.
+The @code{mpfr_set_float16} function is built only if the
+compiler or system provides the @samp{_Float16} data type
+(GCC 12 or later supports this data type).
 The @code{mpfr_set_float128} function is built only with the configure
 option @samp{--enable-float128}, which requires the compiler or
 system provides the @samp{_Float128} data type
@@ -1730,6 +1734,7 @@ See @code{mpfr_set_str}.
 @deftypefun float mpfr_get_flt (const mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
 @deftypefunx double mpfr_get_d (const mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
 @deftypefunx {long double} mpfr_get_ld (const mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
+@deftypefunx {_Float16} mpfr_get_float16 (const mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
 @deftypefunx {_Float128} mpfr_get_float128 (const mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
 @deftypefunx _Decimal64 mpfr_get_decimal64 (const mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
 @deftypefunx _Decimal128 mpfr_get_decimal128 (const mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
@@ -1741,9 +1746,10 @@ of 0.0/0.0 is returned (the sign bit is not preserved).
 If @var{op} is @pom{}Inf, an infinity of the same
 sign or the result of @pom{}1.0/0.0 is returned. If @var{op} is zero, these
 functions return a zero, trying to preserve its sign, if possible.
-The @code{mpfr_get_float128}, @code{mpfr_get_decimal64} and
-@code{mpfr_get_decimal128} functions are built
-only under some conditions: see the documentation of @code{mpfr_set_float128},
+The @code{mpfr_get_float16}, @code{mpfr_get_float128},
+@code{mpfr_get_decimal64} and @code{mpfr_get_decimal128} functions are built
+only under some conditions: see the documentation of @code{mpfr_set_float16},
+@code{mpfr_set_float128},
 @code{mpfr_set_decimal64} and @code{mpfr_set_decimal128} respectively.
 @end deftypefun
 
@@ -4460,6 +4466,8 @@ in MPFR@tie{}4.0.
 
 @item @code{mpfr_get_decimal128} in MPFR@tie{}4.1.
 
+@item @code{mpfr_get_float16} in MPFR@tie{}4.3.0.
+
 @item @code{mpfr_get_float128} in MPFR@tie{}4.0 if configured with
 @samp{--enable-float128}.
 
@@ -4523,6 +4531,8 @@ use @code{mpfr_get_z_exp}.
 @item @code{mpfr_set_decimal128} in MPFR@tie{}4.1.
 
 @item @code{mpfr_set_divby0} in MPFR@tie{}3.1 (new divide-by-zero exception).
+
+@item @code{mpfr_set_float16} in MPFR@tie{}4.4.0.
 
 @item @code{mpfr_set_float128} in MPFR@tie{}4.0 if configured with
 @samp{--enable-float128}.
