@@ -74,7 +74,7 @@ mpfr-mini-gmp.h fmma.c log_ui.c gamma_inc.c ubf.c invert_limb.h         \
 invsqrt_limb.h beta.c odd_p.c get_q.c pool.c total_order.c set_d128.c   \
 get_d128.c nbits_ulong.c cmpabs_ui.c sinu.c cosu.c tanu.c fmod_ui.c     \
 acosu.c asinu.c atanu.c compound.c exp2m1.c exp10m1.c powr.c trigamma.c \
-set_float16.c
+set_float16.c get_float16.c
 
 nodist_libmpfr_la_SOURCES = $(BUILT_SOURCES)
 
