@@ -22,6 +22,9 @@ If not, see <https://www.gnu.org/licenses/>.
 Changes from versions 4.2.* to version 4.3.0:
 - The "" release.
 - New function mpfr_compound.
+- New function mpfr_trigamma.
+- New functions mpfr_set_float16 and mpfr_get_float16 (when the _Float16 data
+  type is available).
 - The mpfr_lgamma function allows its signp argument to be a null pointer.
 
 Changes from versions 4.1.* to version 4.2.0:
